fix: align status bar items & add hover style

--- a/styles/status-bar.less
+++ b/styles/status-bar.less
@@ -1,7 +1,5 @@
-
 // Status Bar
 // -------------------
-
 // Located at the bottom.
 // Displays information about the current editor.
 // Overrides: atom/status-bar
@@ -15,17 +13,71 @@
   background-color: @tree-view-background-color;
 
   .inline-block {
+    height: 100%;
+    box-sizing: border-box;
     margin: 0;
-    padding: 0 .618em;
+    padding: 0 0.618em;
     vertical-align: top;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    // overflow: hidden;
+    // text-overflow: ellipsis;
+    // white-space: nowrap;
+    &:hover {
+      background: linear-gradient(transparent, @tab-background-color-active);
+    }
+
+    .inline-block {
+      padding: 0;
+    }
+  }
+  // affact `vk-terminal`
+  .vk-terminal {
+    border: 0; // override `vk-terminal` top border
+    line-height: 0;
+    margin: 0;
+    padding: 0 0.618em;
+    vertical-align: unset;
+  }
+
+  .icon,
+  [class*="icon"] {
+    line-height: unset !important;
+
+    &::before {
+      font-size: 1.2em;
+      width: auto !important;
+      height: 1em;
+      line-height: 1;
+      margin-right: 0.25em;
+      top: auto;
+    }
+  }
+  // No margin right when no words next to icon, only icon
+  .vk-terminal .icon::before,
+  status-bar-launch-mode.icon::before {
+    margin-right: 0;
+  }
+  // `inline-git-diff`
+  .inline-git-diff-status div {
+    padding: 0;
+  }
+
+  a {
+    padding-top: 0;
+    padding-bottom: 0;
+
+    &:hover {
+      text-decoration: none;
+      cursor: default;
+    }
   }
 
   .status-bar-right {
+    z-index: 10;
+    padding-left: 0;
+    box-shadow: -.8em 0 0.6em @tree-view-background-color;
+
     .inline-block {
-    margin: 0px;
-  }
+      margin: 0;
+    }
   }
 }
